--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -87,3 +87,18 @@ header {
 
 }
 
+
+/* 
+----------------------------------------------------
+----------------------- main page ---------------------
+----------------------------------------------------
+ */
+
+.increase, 
+.decrease {
+    padding: 2px 6px;
+    background-color: rgb(214, 206, 196);
+    border: 1px solid rgb(182, 175, 167);
+    border-radius: 3px;
+}
+
