--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -36,12 +36,12 @@
 
             .nav-link {
                 transition: 0.5s ease;
-                color: white;
+                color: black;
                 text-decoration: none;
             }
             
             .nav-link:hover {
-                color: rgb(184, 175, 168);
+                color: rgb(229, 231, 235);
             }
         }
     }
