--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,3 +1,10 @@
+body {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
+    background-color: white;
+}
+
 /* 
 ----------------------------------------------------
 ----------------------- header ---------------------
@@ -5,7 +12,11 @@
  */
 
 header {
-    background-color: rgb(214, 206, 196);
+    grid-column: span 4;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
+    background-color: white;
 }
 
 .navbar {
@@ -16,8 +27,7 @@ header {
 
     .heading {
         font-size: 2.2rem;
-        color: white;
-        text-transform: uppercase;
+        color: black;
         text-decoration: none;
         position: relative;
         left: 20px;
@@ -32,7 +42,7 @@ header {
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        background-color: rgb(214, 206, 196);
+        background-color: white;
         width: 100%;
         height: 100%;
         text-align: center;
@@ -46,7 +56,7 @@ header {
             list-style: none;
 
             .nav-link {
-                color: white;
+                color: black;
                 text-decoration: none;
             }
         }
@@ -60,6 +70,8 @@ header {
         display: block;
         position: absolute;
         right: 20px;
+        background: transparent;
+        border: none;
 
         .bar {
             display: block;
@@ -68,7 +80,7 @@ header {
             margin: 5px auto;
             -webkit-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
-            background-color: white;
+            background-color: black;
             border-radius: 7px;
         }
     }
@@ -94,11 +106,31 @@ header {
 ----------------------------------------------------
  */
 
-.increase, 
-.decrease {
-    padding: 2px 6px;
-    background-color: rgb(214, 206, 196);
-    border: 1px solid rgb(182, 175, 167);
-    border-radius: 3px;
+main {
+    grid-column: span 4;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
 }
+
+h1 {
+    grid-column: 2 / 4;
+    text-align: center;
+    padding: 50px 0;
+    font-size: 3rem;
+}
+
+div {
+    grid-column: span 4;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
+}
+
+img {
+    grid-column: span 4;
+    max-width: 100%;
+    height: auto;
+}
+
 
