feat: add sort by price button

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -138,6 +138,19 @@ main {
     }
 }
 
+.sort-container {
+    grid-column: span 4;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
+
+    .sort-button {
+        grid-column: 4;
+        padding: 5px;
+        position: relative;
+    }
+}
+
 .product-container {
     grid-column: span 4;
     display: grid;
