--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -21,12 +21,14 @@ header {
 
 .navbar {
     min-height: 60px;
+    width: 300px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     .heading {
-        font-size: 2.2rem;
+        font-size: 2.5rem;
+        font-family: 'Arizonia', cursive;
         color: black;
         text-decoration: none;
         position: relative;
@@ -121,12 +123,36 @@ main {
 
     h1 {
         grid-column: span 4;
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        gap: 10px;
         text-align: center;
-        font-size: 3rem;
+        font-family: 'Arizonia', cursive;
         margin: 0;
         height: 100vh;
         position: relative;
-        top: 250px;
+        top: 100px;
+
+        .welcome {
+            grid-column: span 4;
+            max-height: 70px;
+            font-size: 3rem;
+            position: relative;
+            top: 100px;
+        }
+
+        .h1-linebreak {
+            grid-column: span 4;
+            max-height: 20px;
+        }
+
+        .cafe-c {
+            grid-column: span 4;
+            max-height: 150px;
+            position: relative;
+            top: -250px;
+            font-size: 7.5rem;
+        }
     }
 
     .first-page-divider {
@@ -140,28 +166,52 @@ main {
 
 .sort-container {
     grid-column: span 4;
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
 
     .sort-products {
-        position: relative;
-        left: -70px;
-        top: 32px;
+        grid-column: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         font-family: 'Open Sans', sans-serif;
     }
 
-    .sort-name, .sort-price, .sort-category {
+    .sort-name, .sort-price {
         background: transparent;
         border: none;
-        position: relative;
-        right: 10px;
         margin: 20px 10px 10px 10px;
         width: 50px;
         height: 50px;
+        position: relative;
+        right: -50px;
+        cursor: pointer;
     }
 
+    .sort-name {
+        grid-column: 3;
+    }
 
-    
+    .sort-price {
+        grid-column: 4;
+    }
+}
+
+.category-container {
+    grid-column: span 4;
+    display: flex;
+    justify-content: space-around;
+
+    .category-labels {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 0.9rem;
+
+        .sort-vegan-button, .sort-gluten-free-button, .sort-nuts-button {
+            transform: scale(1.3);
+            margin: 5px;
+        }
+    }
 }
 
 .product-container {
@@ -178,18 +228,17 @@ main {
         align-items: center;
         justify-content: center;
         justify-content: space-between;
-    
-        .product-heading {
-            grid-column: 2 / 4;
-            text-align: center;
-            text-transform: uppercase;
-            font-family: 'Montserrat', sans-serif;
-        }
 
         img {
             width: 400px;
             height: auto;
-            margin-top: 200px;
+            margin-top: 180px;
+        }
+
+        .product-heading {
+            text-align: center;
+            text-transform: uppercase;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .product-info {
@@ -202,12 +251,14 @@ main {
             font-family: 'Open Sans', sans-serif;
     
             .product-price {
-                grid-column: 2 / 4;
                 padding: 5px 0;
             }
         
             .product-rating {
-                grid-column: 2 / 4;
+                padding: 5px 0;
+            }
+
+            .product-category {
                 padding: 5px 0;
             }
         }
@@ -222,6 +273,7 @@ main {
                 border: none;
                 border-radius: 8px;
                 padding: 0 11px 3px 11px;
+                cursor: pointer;
             }
             
             .increase {
@@ -232,6 +284,7 @@ main {
                 padding: 0 8px 3px 8px;
                 width: 30px;
                 height: 30px;
+                cursor: pointer;
             }
         }
 
@@ -304,7 +357,7 @@ main {
 }
 
 
-form {
+.customer-form {
     grid-column: span 4;
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -320,7 +373,7 @@ form {
     }
 
     .input-container {
-        grid-column: 1 / 5;
+        grid-column: span 4;
         display: flex;
         justify-content: space-between;
 
@@ -331,11 +384,56 @@ form {
         }
     }
 
-    .order-button {
-        background: rgb(255, 192, 227);
-        border: none;
-        border-radius: 3px;
-        padding: 10px 20px;
+    .hidden {
+        display: none;
+    }
+
+    .payment-options {
+        grid-column: span 4;
+        margin-top: 30px;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        width: 400px;
+        transform: translate(-50%, -50%);
+        background-color: rgb(210, 231, 231);
+        border-radius: 8px;
+        padding: 8px;
+        border: 1px solid #262626;
+
+        .order-button {
+            padding: 8px 16px;
+            font-size: 1.2rem;
+            background-color: rgb(255, 192, 227);
+            border: 0;
+            border-radius: 8px;
+            cursor: pointer;
+            color: white;
+            &:disabled {
+                background-color: #b5b5b5;
+                cursor: not-allowed;
+            }
+        }
+
+        .selector {
+            margin-block: 16px;
+            text-align: center;
+        }
+        
+        input.small {
+            width: 80px;
+        }
+        
+          .card, .invoice {
+            label {
+              display: flex;
+              gap: 8px;
+              margin-block: 8px;
+              align-items: center;
+              justify-content: space-between;
+            }
+          }
+        
     }
 }
 
