--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -314,10 +314,16 @@ main {
     padding-left: 10px;
     
     h3 {
-        grid-column: 1 / 5;
+        grid-column: 1 / 3;
         font-size: 1.8rem;
         padding: 45px 0px 20px 10px;
         font-family: 'Montserrat', sans-serif;
+    }
+
+    .timer {
+        grid-column: 4;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 0.8rem;
     }
 
     h4 {
@@ -382,6 +388,42 @@ main {
             border: 1px solid black;
             padding: 8px 5px;
         }
+    }
+
+    .discount-container {
+        grid-column: span 4;
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        gap: 10px;
+        margin-top: 30px;
+
+        .discount-label {
+            grid-column: span 4;
+        }
+
+        .discount-input {
+            grid-column: span 2;
+            width: 195px;
+            border-radius: 4px;
+            border: 1px solid black;
+            padding: 8px 5px;
+        }
+
+        .discount-button {
+            position: relative;
+            left: -87px;
+            font-size: 1.5rem;
+            background-color: rgb(255, 192, 227);
+            border: none;
+            border-radius: 8px;
+            width: 40px;
+            cursor: pointer;
+        }
+    }
+
+    .form-checkboxes {
+        grid-column: span 4;
+        margin: 5px 0;
     }
 
     .hidden {
