--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -3,6 +3,17 @@ body {
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 10px;
     background-color: white;
+    transition: background-color 0.5s ease;     
+}
+
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+.light-mode {
+    background-color: #fff;
+    color: #333;
 }
 
 /* 
@@ -13,15 +24,8 @@ body {
 
 header {
     grid-column: span 4;
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 10px;
-    background-color: white;
-}
-
-.navbar {
     min-height: 60px;
-    width: 300px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -29,76 +33,26 @@ header {
     .heading {
         font-size: 2.5rem;
         font-family: 'Arizonia', cursive;
-        color: black;
         text-decoration: none;
+        color: rgb(234, 176, 208);
         position: relative;
         left: 20px;
     }
 
-    .nav-menu {
-        position: fixed;
-        left: -100%;
-        top: 50px;
-        gap: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        background-color: white;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        transition: 0.3s;
-
-        .nav-item {
-            position: relative;
-            bottom: 40px;
-            margin: 16px 0;
-            font-size: 1.5rem;
-            list-style: none;
-
-            .nav-link {
-                color: black;
-                text-decoration: none;
-            }
-        }
-    }
-
-    .nav-menu.active {
-        left: 0;
-    }
-
-    .burger-menu {
-        display: block;
-        position: absolute;
+    .theme-toggle {
+        grid-column: 4;
+        position: relative;
         right: 20px;
-        background: transparent;
+        width: 60px;
+        height: 35px;
+        padding: 10px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 0.8rem;
+        background-color: rgb(255, 192, 227);
         border: none;
-
-        .bar {
-            display: block;
-            width: 30px;
-            height: 3px;
-            margin: 5px auto;
-            -webkit-transition: all 0.3s ease-in-out;
-            transition: all 0.3s ease-in-out;
-            background-color: black;
-            border-radius: 7px;
-        }
+        border-radius: 8px;
+        cursor: pointer;
     }
-    
-    .burger-menu.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-    
-    .burger-menu.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-    
-    .burger-menu.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
 }
 
 
