--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -16,6 +16,7 @@ body {
     color: #333;
 }
 
+
 /* 
 ----------------------------------------------------
 ----------------------- header ---------------------
@@ -132,7 +133,7 @@ main {
         font-family: 'Open Sans', sans-serif;
     }
 
-    .sort-name, .sort-price {
+    .sort-name, .sort-price, .sort-rating {
         background: transparent;
         border: none;
         margin: 20px 10px 10px 10px;
@@ -144,10 +145,14 @@ main {
     }
 
     .sort-name {
-        grid-column: 3;
+        grid-column: 2;
     }
 
     .sort-price {
+        grid-column: 3;
+    }
+
+    .sort-rating {
         grid-column: 4;
     }
 }
