--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -178,6 +178,7 @@ main {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 10px;
+    font-family: 'Open Sans', sans-serif;
 
     article {
         grid-column: span 4;
@@ -207,7 +208,6 @@ main {
             justify-content: space-evenly;
             position: relative;
             top: -15px;
-            font-family: 'Open Sans', sans-serif;
     
             .product-price {
                 padding: 5px 0;
@@ -252,7 +252,6 @@ main {
             position: relative;
             bottom: 50px;
             padding: 10px 0;
-            font-family: 'Open Sans', sans-serif;
             font-size: 0.8rem;
         }
     }
@@ -271,12 +270,13 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
-    background-color: #fff;
+    background-color: rgb(255, 231, 244);
+    font-family: 'Open Sans', sans-serif;
+    color: #333;
     border: 1px solid #ccc;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 0;
     display: none;
-    font-family: 'Open Sans', sans-serif;
   
     opacity: 0;
     animation: fadeInOut 2s ease-out;
@@ -303,6 +303,7 @@ main {
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 10px;
     padding-left: 10px;
+    font-family: 'Open Sans', sans-serif;
     
     h3 {
         grid-column: 1 / 3;
@@ -313,19 +314,16 @@ main {
 
     .timer {
         grid-column: 4;
-        font-family: 'Open Sans', sans-serif;
         font-size: 0.8rem;
     }
 
     h4 {
         grid-column: 1 / 5;
-        font-family: 'Open Sans', sans-serif;
         font-size: 1.2rem;
         padding: 15px 0 15px 10px;
     }
 
     p {
-        font-family: 'Open Sans', sans-serif;
         font-weight: 600;
         padding: 0 0 15px 10px;
     }
@@ -338,7 +336,6 @@ main {
 
         .cart-summary {
             grid-column: span 4;
-            font-family: 'Open Sans', sans-serif;
             padding: 0 0 15px 10px;
         }
     
@@ -349,35 +346,6 @@ main {
 
         .total-sum {
             grid-column: span 4;
-        }
-    }
-}
-
-
-.customer-form {
-    grid-column: span 4;
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 10px;
-    font-family: 'Open Sans', sans-serif;
-    padding: 40px 20px 0 20px;
-
-    h5 {
-        font-size: 1.7rem;
-        position: relative;
-        left: -3px;
-        margin-bottom: 20px;
-    }
-
-    .input-container {
-        grid-column: span 4;
-        display: flex;
-        justify-content: space-between;
-
-        input {
-            border-radius: 4px;
-            border: 1px solid black;
-            padding: 8px 5px;
         }
     }
 
@@ -409,6 +377,35 @@ main {
             border-radius: 8px;
             width: 40px;
             cursor: pointer;
+        }
+    }
+}
+
+
+.customer-form {
+    grid-column: span 4;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 10px;
+    font-family: 'Open Sans', sans-serif;
+    padding: 40px 20px 0 20px;
+
+    h5 {
+        font-size: 1.7rem;
+        position: relative;
+        left: -3px;
+        margin-bottom: 20px;
+    }
+
+    .input-container {
+        grid-column: span 4;
+        display: flex;
+        justify-content: space-between;
+
+        input {
+            border-radius: 4px;
+            border: 1px solid black;
+            padding: 8px 5px;
         }
     }
 
