--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -11,29 +11,14 @@ body {
 ----------------------------------------------------
  */
 
-.navbar {
+header {
+    grid-column: span 12;
     min-height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 0 24px;
 
     .heading {
-        font-size: 2.6rem;
+        font-size: 2.3rem;
     }
-
-    .nav-menu {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        height: 70px;
-        width: 50%;
-        right: 0;
-        top: 0px;
-        left: auto;
-        gap: 60px;
-    }    
 }
 
 
@@ -73,19 +58,24 @@ body {
 
     .sort-products {
         grid-column: 8 / 10;
-        display: flex;
+        position: relative;
+        top: 2px;
     }
 
     .sort-name {
-        grid-column: 11;
+        grid-column: 10;
         position: relative;
         left: -25px;
     }
 
     .sort-price {
-        grid-column: 12;
+        grid-column: 11;
         position: relative;
         left: -25px;
+    }
+
+    .sort-rating {
+        grid-column: 12;
     }
 }
 
@@ -129,37 +119,34 @@ body {
 .product-container {
     grid-column: span 12;
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(12, minmax(0, 1fr));
     gap: 10px;
 
     article {
         grid-column: span 12;
         display: grid;
-        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-template-columns: repeat(12, minmax(0, 1fr));
         gap: 10px;
         flex-direction: row;
 
         img {
-            grid-column: 1 / 5;
-            width: 600px;
+            grid-column: 2 / 6;
+            width: 500px;
             height: auto;
+            margin-top: 140px;
         }
 
         .product-heading {
-            grid-column: 6 / 12;
-            position: relative;
-            left: -60px;
+            grid-column: 8 / 13;
         }
     
         .product-info {
-            grid-column: 6 / 13;
+            grid-column: 8 / 13;
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: space-evenly;
             position: relative;
-            top: -240px;
-            left: -60px;
+            top: -200px;
             font-family: 'Open Sans', sans-serif;
     
             .product-price {
@@ -176,36 +163,38 @@ body {
         }
     
         .button-container {
-            grid-column: 7;
+            grid-column: 8 / 13;
+            display: flex;
+            justify-content: center;
             position: relative;
-            bottom: 20px;
+            top: -190px;
     
-            .decrease {
+            .decrease, .increase {
                 font-size: 1.5rem;
                 width: 50px;
                 height: 50px;
-            }
-            
-            .increase {
-                font-size: 1.5rem;
-                width: 50px;
-                height: 50px;
+                margin: 5px;
             }
         }
     
         .product-amount {
-            grid-column: 2 / 4;
+            grid-column: 8 / 13;
+            display: flex;
+            justify-content: center;
             position: relative;
-            bottom: 50px;
-            padding: 10px 0;
-            font-family: 'Open Sans', sans-serif;
-            font-size: 0.8rem;
+            top: -190px;
+            font-size: 0.9rem;
         }
     }
 
     .divider {
         grid-column: span 12;
     }
+}
+
+#popup {
+    padding: 20px;
+    font-size: 1.2rem;
 }
 
 
@@ -258,34 +247,32 @@ body {
     }
 }
 
+#orderSummary {
+    width: 800px;
+}
+
 .customer-form {
-    grid-column: 1 / 6;
+    grid-column: span 12;
     display: grid;
     grid-template-columns: repeat(12, minmax(0, 1fr));
     gap: 10px;
     padding: 40px 20px 0 20px;
 
     h5 {
+        grid-column: span 12;
         font-size: 1.7rem;
         position: relative;
-        left: -3px;
+        left: 10px;
         margin-bottom: 20px;
     }
 
     .input-container {
-        grid-column: span 12;
-        display: flex;
-        justify-content: space-between;
-
-        input {
-            border-radius: 4px;
-            border: 1px solid black;
-            padding: 8px 5px;
-        }
+        grid-column: span 6;
+        margin: 0 10px;
     }
 
     .discount-container {
-        grid-column: span 12;
+        grid-column: 1 / 6;
         display: grid;
         grid-template-columns: repeat(12, minmax(0, 1fr));
         gap: 10px;
@@ -317,7 +304,7 @@ body {
 
     .form-checkboxes {
         grid-column: 1 / 6;
-        margin: 5px 0;
+        margin: 5px 10px;
     }
 
     .hidden {
@@ -325,17 +312,11 @@ body {
     }
 
     .payment-options {
-        grid-column: span 6 / 13;
+        grid-column: span 1 / 5;
         margin-top: 30px;
         position: relative;
-        top: 50%;
-        left: 50%;
-        width: 400px;
-        transform: translate(-50%, -50%);
-        background-color: rgb(210, 231, 231);
-        border-radius: 8px;
-        padding: 8px;
-        border: 1px solid #262626;
+        left: -15px;
+        width: 500px;
 
         .order-button {
             padding: 8px 16px;
