--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -119,6 +119,7 @@ main {
     }
 }
 
+
 .sort-container {
     grid-column: span 4;
     display: grid;
@@ -154,6 +155,8 @@ main {
 
     .sort-rating {
         grid-column: 4;
+        position: relative;
+        bottom: 5px;
     }
 }
 
@@ -192,7 +195,7 @@ main {
         img {
             width: 400px;
             height: auto;
-            margin-top: 180px;
+            margin-top: 110px;
         }
 
         .product-heading {
@@ -257,7 +260,7 @@ main {
     }
 
     .divider {
-        grid-column: 1 / 5;
+        grid-column: span 4;
         height: 1px;
         width: 100%;
         background-color: black;
@@ -369,8 +372,9 @@ main {
         }
 
         .discount-button {
+            grid-column: 3;
             position: relative;
-            left: -87px;
+            right: 100px;
             font-size: 1.5rem;
             background-color: rgb(255, 192, 227);
             border: none;
@@ -393,11 +397,13 @@ main {
     padding: 20px;
     font-family: 'Open Sans', sans-serif;
     font-size: 0.9rem;
+    color: #333;
     line-height: 1.5;;
     border: 1px solid #ccc;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 0;
     display: block;
+    z-index: 1;
 
     .order-summary-heading {
         font-family: 'Montserrat', sans-serif;
