style: add styling to reset button

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -307,6 +307,10 @@ header {
         margin: 5px 10px;
     }
 
+    .reset-button {
+        grid-column: 11 / 13;
+    }
+
     .hidden {
         display: none;
     }
